--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redux-persist": "^6.0.0",
     "rest-mssql-nodejs": "^1.0.10",
     "styled-components": "^5.3.1",
     "tedious": "^11.4.0"
