--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "mssql": "^7.2.0",
     "next": "^11.1.0",
+    "next-seo": "^4.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redux-persist": "^6.0.0",
