--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "isomorphic-unfetch": "^3.1.0",
     "mssql": "^7.2.0",
     "next": "^11.1.0",
