--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^7.0.3",
-    "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.1.0",
     "mssql": "^7.2.0",
@@ -24,6 +23,7 @@
     "react-dom": "^17.0.2",
     "redux-persist": "^6.0.0",
     "rest-mssql-nodejs": "^1.0.10",
+    "sjcl": "^1.0.8",
     "styled-components": "^5.3.1",
     "tedious": "^11.4.0"
   },
