--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/cosmos": "^3.14.1",
     "cross-env": "^7.0.3",
     "isomorphic-unfetch": "^3.1.0",
     "mssql": "^7.2.0",
