--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "dependencies": {
     "@azure/cosmos": "^3.14.1",
     "cross-env": "^7.0.3",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^9.12.0",
     "intersection-observer": "^0.12.0",
     "isomorphic-unfetch": "^3.1.0",
     "mssql": "^7.2.0",
     "next": "^11.1.0",
+    "next-firebase-auth": "^0.13.5-alpha.0",
     "next-seo": "^4.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^5.0.2",
     "redux-persist": "^6.0.0",
     "rest-mssql-nodejs": "^1.0.10",
     "sjcl": "^1.0.8",
